// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoRecBox renders horizontally when isVertical is set to false 1`] = `
<div
  className="rec-box rec-box--horizontal"
  onClick={[Function]}
  role="presentation"
>
  <span
    className="circle circle--horizontal"
  >
    <img
      alt="box icon"
      src="test icon"
    />
  </span>
  <input
    accept="image/jpeg"
    className="input-front-license"
    id="front-license"
    name="front-license"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`PhotoRecBox renders with box description if box description is defined 1`] = `
<div
  className="rec-box rec-box--horizontal"
  onClick={[Function]}
  role="presentation"
>
  <span
    className="circle circle--horizontal"
  >
    <img
      alt="box icon"
      src="test icon"
    />
  </span>
  <input
    accept="image/jpeg"
    className="input-front-license"
    id="front-license"
    name="front-license"
    onChange={[Function]}
    type="file"
  />
  <div
    className="box-description box-description--horizontal"
  >
    test description
  </div>
</div>
`;

exports[`PhotoRecBox renders with box icon 1`] = `
<div
  className="rec-box rec-box--vertical"
  onClick={[Function]}
  role="presentation"
>
  <span
    className="circle circle--vertical"
  >
    <img
      alt="box icon"
      src="test icon"
    />
  </span>
  <input
    accept="image/jpeg"
    className="input-front-license"
    id="front-license"
    name="front-license"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`PhotoRecBox renders with box image 1`] = `
<div
  className="rec-box rec-box--vertical"
  onClick={[Function]}
  role="presentation"
>
  <input
    accept="image/jpeg"
    className="input-front-license"
    id="front-license"
    name="front-license"
    onChange={[Function]}
    type="file"
  />
  <div
    className="box-image-container"
  >
    <img
      alt="box"
      className="box-image"
      src="test image"
    />
    <div
      className="check-mark-circle"
    >
      <span
        className="check-mark"
      />
    </div>
  </div>
</div>
`;

exports[`PhotoRecBox renders with box title if box title is defined 1`] = `
<div
  className="rec-box rec-box--horizontal"
  onClick={[Function]}
  role="presentation"
>
  <span
    className="circle circle--horizontal"
  >
    <img
      alt="box icon"
      src="test icon"
    />
  </span>
  <input
    accept="image/jpeg"
    className="input-front-license"
    id="front-license"
    name="front-license"
    onChange={[Function]}
    type="file"
  />
  <div
    className="box-title box-title--horizontal"
  >
    test title
  </div>
</div>
`;
